[metadata]
name = OpenPGPAbs
#version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/OpenPGPAbs.py
description = Just an abstraction layer between different python libs implementing interaction with OpenPGP keys and signatures.
long_description = file: ReadMe.md
keywords = OpenPGP
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
setup_requires = setuptools_scm;

